# IFAC2026

./: .gitignore  .gitmodules  MIGRATION.md  README.md
docs/: MPCC_ALGORITHM_REFERENCE.md  SESSION_HANDOFF_mintime_2026-06-12.md  SESSION_HANDOFF_trackB_2026-06-09.md
docs/superpowers/: AVOIDANCE_WORKLOG.md  B4_WORKLOG.md
maps/: README.md
maps/f/: ot_sectors.yaml
maps/gazebo_wall_2/: friction_scaling.yaml  ot_sectors.yaml  speed_scaling.yaml  static_obs_sectors.yaml
maps/hall_0609/: boundary_left.csv  boundary_right.csv  global_waypoints.json  hall_0609.yaml
maps/lab/: boundary_left.csv  boundary_right.csv  global_waypoints.json
maps/midterm/: boundary_right.csv  centerline.csv
scripts/: port_to_realcar.sh
scripts/mintime_final2/: make_map.py  mintime_traj.npz  opt_mintime_patched.py  racecar_f110.ini  run_mintime.py  traj_opt_patched.py
src/abp_detection/: package.xml  setup.py
src/ccma/: setup.py  (+1 more)
src/control/controller/: package.xml  setup.py
src/control/controller/config/: friction_circle.yaml  lqr_params.yaml  pp_params.yaml  stanley_params.yaml
src/control/controller/controller/: Controller.py  estop.py  friction_circle_controller.py  friction_test.py  lqr.py  pp.py  simple_pp.py  stanley.py  stanley_plot.py
src/control/nonlinear_mpcc/nonlinear_mpc_acados/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/control/nonlinear_mpcc/nonlinear_mpc_acados/config/tire/: linear.yaml
src/control/nonlinear_mpcc/nonlinear_mpc_acados/nonlinear_mpc_acados/: mpc_node.py
src/control/nonlinear_mpcc/nonlinear_mpc_acados/nonlinear_mpc_acados/mpc_core/: _ros_compat.py
src/control/nonlinear_mpcc/nonlinear_mpc_acados/share/tracks/trackf/: export_real_centerline.py  trackf_iqp_raceline_backup.csv
src/control/nonlinear_mpcc/nonlinear_mpc_acados/share/tracks/trackicra/: trackicra_center_derivates.csv  trackicra_left_waypoints.csv
src/control/nonlinear_mpcc/nonlinear_mpc_acados/share/tracks/trackwheV1racing/: trackwheV1racing_center_derivates.csv  trackwheV1racing_left_waypoints.csv  trackwheV1racing_right_waypoints.csv
src/control/nonlinear_mpcc/nonlinear_mpc_acados/test/: test_import.py
src/control/nonlinear_mpcc/osuf1_common/: CMakeLists.txt  package.xml
src/control/nonlinear_mpcc/osuf1_common/msg/: MPCMetadata.msg  MPCTrajectory.msg
src/control/stanley_tuner/: package.xml  setup.cfg  setup.py
src/control/stanley_tuner/config/: tuner_params.yaml
src/control/stanley_tuner/stanley_tuner/: bayes_tuner.py  metrics_collector.py  param_mapper_node.py  rule_tuner.py  sector_map.py  sector_visualizer.py  tuner_node.py
src/f110_description/: package.xml
src/f110_msgs/: CMakeLists.txt  package.xml
src/f110_msgs/msg/: OppWpnt.msg
src/fake_odom_publisher/: package.xml  setup.cfg  setup.py
src/fake_odom_publisher/fake_odom_publisher/: fake_odom_publisher.py  raceline.py
src/frenet_conversion_msgs/: CMakeLists.txt  package.xml
src/frenet_conversion_msgs/srv/: Frenet2Glob.srv  Glob2Frenet.srv  Glob2FrenetArr.srv
src/frenet_odom_republisher/: package.xml
src/frenet_odom_republisher/frenet_odom_republisher/: transforms.py
src/frenet_odom_republisher/launch/: frenet_odom_republisher.launch.py
src/frenet_odom_republisher/test/: test_transforms.py
src/legacy/ccma/: package.xml
src/legacy/fast_sqp_planner/: package.xml  setup.cfg
src/legacy/fast_sqp_planner/fast_sqp_planner/: fast_sqp_planner_node.py  sqp_casadi.py  warm_start.py
src/legacy/random_obstacle_publisher/: package.xml
src/legacy/random_obstacle_publisher/random_obstacle_publisher/: obstacle_geometry.py
src/legacy/random_obstacle_publisher/test/: test_obstacle_geometry.py
src/legacy/t2v/t2v_node_msgs/: package.xml
src/legacy/vel_planner_25d/: package.xml
src/mac/vesc_driver_mac/: README.md  package.xml  setup.cfg  setup.py
src/mac/vesc_driver_mac/config/: vesc_config.yaml
src/mac/vesc_driver_mac/launch/: vesc_all.launch.xml
src/mac/vesc_driver_mac/vesc_driver_mac/: teleop_joy.py
src/obstacle_publisher/: package.xml  setup.py
src/obstacle_publisher/launch/: obstacle_publisher.launch.py
src/obstacle_publisher/obstacle_publisher/: dynamic_obstacle_publisher.py  gazebo_static_obstacle_publisher.py  static_obstacle_manager.py
src/obstacle_publisher/test/: test_opponent_resampling.py
src/planning/grid_filter/: package.xml
src/planning/grid_filter/grid_filter/: __init__.py
src/rqt_gg_viewer/: package.xml  plugin.xml
src/sensor/elrs_joy/: package.xml  setup.py
src/sensor/elrs_joy/elrs_joy/: elrs_joy_ft232_node.py  elrs_joy_node.py
src/sensor/elrs_joy/launch/: elrs_joy.launch.py  elrs_joy_ft232.launch.py
src/slam/fast_livo_global_init/: CMakeLists.txt  package.xml
src/slam/fast_livo_global_init/config/: global_init.yaml
src/slam/fast_livo_global_init/include/fast_livo_global_init/: global_init_node.hpp
src/slam/fast_livo_global_init/launch/: global_init.launch.py
src/slam/fast_livo_global_init/src/: global_init_node.cpp  global_init_node_main.cpp  test_self_match_main.cpp
src/state_machine/: package.xml  setup.py
src/state_machine/launch/: state_machine_smoke.launch.py
src/state_machine/state_machine/: fake_topic_relay.py  path_checker.py  state_machine_callbacks.py  state_machine_init.py  state_machine_node.py  state_machine_visualization.py  state_transitions.py  states_types.py  waypoint_data.py
src/state_machine/test/: conftest.py  fake_msgs.py  test_path_checker.py
src/steering_lookup/: package.xml
src/steering_lookup/steering_lookup/: lookup_steer_angle.py
src/system/frenet_conversion/: package.xml  setup.py
src/system/frenet_conversion/frenet_conversion/: __init__.py
src/system/frenet_conversion/launch/: frenet_conversion_server.launch.py
src/system/frenet_conversion/test/: test_frenet_converter.py
src/system/global_republisher/: package.xml
src/system/global_republisher/global_republisher/: global_republisher.py
src/system/global_republisher/launch/: global_republisher.launch.py
src/track_3d_validator/: package.xml  setup.cfg
src/track_3d_validator/track_3d_validator/: track_3d_validator.py
(+1766 files in other folders)
