<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frenet_conversion_msgs</name>
  <version>0.1.0</version>
  <description>
    Frenet 변환 service 정의 (Frenet2Glob, Frenet2GlobArr, Glob2Frenet, Glob2FrenetArr).
    원본 ROS1 frenet_conversion 의 srv 부분만 별도 패키지로 분리 (인터페이스 / 구현 격리).
    SH ROS2 Jazzy 포팅. 3D z 필드는 원본 (HJ 추가) 그대로 유지.
  </description>

  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
