<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_publisher</name>
  <version>0.1.0</version>
  <description>
    F1TENTH 시뮬레이션용 동적 obstacle (가짜 상대 차량) publisher.
    선택한 트랙 (min_curv / shortest_path / centerline) 위 raceline 을 따라
    speed_scaler 로 스케일링된 속도로 주행하는 obstacle 1 개를
    /tracking/obstacles 로 발행. 시작 위치는 start_s 파라미터.
    원본 ROS1: f110_utils/nodes/obstacle_publisher (252L 본체).
    SH ROS2 Jazzy 포팅 — frenet_conversion service client.
  </description>

  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>frenet_conversion_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
