<?xml version="1.0"?>
<package format="3">
  <name>rqt_gg_viewer</name>
  <version>0.0.1</version>
  <description>RQT plugin: GGV diamond viewer (ROS2 포팅).</description>
  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend>
  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
