<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steering_lookup</name>
  <version>0.1.0</version>
  <description>
    Pacejka 모델 기반 (steering_angle, current) lookup table — controller 가 사용.
    원본 ROS1: system_identification/steering_lookup. SH ROS2 Jazzy 포팅.
  </description>
  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
