<?xml version="1.0"?>
<package format="3">
  <name>fast_sqp_planner</name>
  <version>0.1.0</version>
  <description>Fast SQP planner (CasADi/IPOPT). SH ROS2 Jazzy 포팅.</description>
  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
