<?xml version="1.0"?>
<package format="3">
  <name>vesc_driver_mac</name>
  <version>0.1.0</version>
  <description>macOS launch configuration and joystick teleop for VESC-based Ackermann vehicles (F1TENTH)</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_ackermann</exec_depend>
  <exec_depend>joy_mac</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
