<?xml version="1.0"?>
<package format="3">
  <name>grid_filter</name>
  <version>0.0.1</version>
  <description>OccupancyGrid 기반 erosion 필터 (ROS2 포팅).</description>
  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
