<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elrs_joy</name>
  <version>2.0.0</version>
  <description>ExpressLRS receiver → sensor_msgs/Joy bridge (CRSF over USB serial). ROS 2 Jazzy port with FT232 CRC variant.</description>
  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
