<?xml version="1.0"?>
<package format="3">
  <name>fast_livo_global_init</name>
  <version>0.1.0</version>
  <description>Global localization initial-pose provider for FAST-LIVO2 using KISS-Matcher.</description>
  <maintainer email="freshleesh@gmail.com">mini</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
