<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frenet_conversion</name>
  <version>0.1.0</version>
  <description>
    Frenet ↔ Cartesian 3D 변환 라이브러리 + Python service server.
    원본은 C++ + Python 두 분기 구현이 공존했으나 (README: Python TODO 가
    누군가에 의해 자체 구현으로 전환) 이번 ROS2 포팅에서는 Python 만 유지.
    SH ROS2 Jazzy 포팅. 라이브러리는 ROS 의존 0 (numpy + scipy 만).
  </description>

  <maintainer email="freshleesh@gmail.com">SH</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>frenet_conversion_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
